--- a/src/02-html-basic-lean/第一个html.html
+++ b/src/02-html-basic-lean/第一个html.html
@@ -11,9 +11,26 @@
     charset 字符集
     UTF-8 是一种字符集 -->
 
+    <!--IE8及以上的版本按照最新的标准去渲染-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- 网页标题 -->
+    <title>第一个html</title>
+    <!-- 网页关键字,关键词之间用' , '隔开' -->
+    <meta name="keywords" content="html,css,JavaScript,web前端" />
+    <!-- 网页描述 -->
+    <meta name="description" content="我的web前端学习,第一个html" />
+
+    <meta name="robots" content="index,follow" />
+    <!--
+    all：文件将被检索，且页面上的链接可以被查询；
+    none：文件将不被检索，且页面上的链接不可以被查询；
+    index：文件将被检索；
+    follow：页面上的链接可以被查询，告诉蜘蛛可以被追踪，传递权重；
+    noindex：文件将不被检索；
+    nofollow：页面上的链接不可以被查询，告诉蜘蛛无需追踪，不传递权重。一般用于站外链接。
+ -->
   </head>
 
   <!-- <body></body> <body></body>标签对中书写网页的内容，包括网页的头部、主要内容、页脚等各个部分  -->
