08-文本和字体属性=列表属性

--- a/src/03-css-basic-learning/css基础+选择器/02-css三种样式书写方式.html
+++ b/src/03-css-basic-learning/css基础+选择器/02-css三种样式书写方式.html
@@ -11,10 +11,14 @@
         color: aqua;
       }
     </style>
+
     /* 导入式样式 */
-    <style>
+    <!-- <style>
       @import url(css/index.css);
-    </style>
+    </style> -->
+
+    <!-- 外联样式 -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <h1>02-css三种样式书写方式</h1>
