13-浮动、BFC、清除浮动更改

--- a/src/03-css-basic-learning/07-浮动、BFC 规范、清除浮动/作业三仿小米商城 copy.html
+++ b/src/03-css-basic-learning/07-浮动、BFC 规范、清除浮动/作业三仿小米商城 copy.html
@@ -152,7 +152,7 @@
       </div>
       <!-- boxleft end -->
 
-      boxright start
+      <!-- boxright start -->
       <div class="boxright">
         <ul class="clerfix">
           <li>
