--- a/src/03-css-basic-learning/10-圆角-阴影-文本处理/作业1-天猫登陆页.html
+++ b/src/03-css-basic-learning/10-圆角-阴影-文本处理/作业1-天猫登陆页.html
@@ -12,12 +12,13 @@
       }
       a {
         text-decoration: none;
+        color: rgb(151, 151, 151);
       }
       input {
         padding: 0;
         margin: 0;
         outline: none;
-        /* border: 0; */
+        border: 0;
       }
       .container {
         width: 100%;
@@ -32,7 +33,7 @@
         margin: 0 auto;
         background: url(./images/tmall.png) no-repeat center;
       }
-      .main {
+      .login {
         position: absolute;
         top: 101px;
         right: 0;
@@ -47,61 +48,227 @@
         font-size: 16px;
         font-weight: 700;
         line-height: 32px;
+        margin-bottom: 20px;
       }
       .head > a {
         display: inline-block;
         color: #000;
       }
-      .head > a:hover {
+      .head > .current {
         border-bottom: 4px solid #000;
       }
-      form > div {
-        width: 300px;
-        height: 40px;
-        border: 1px solid rgb(255, 0, 0);
-        margin-top: 25px;
+      .block-login-pwd {
+        margin-bottom: 20px;
       }
-      div.info::before {
-        display: inline-block;
-        content: "";
+      .block-login-mess {
+        display: none;
+      }
+      .input-wrap {
+        width: 300px;
+        height: 42px;
+        /* border: 1px solid #000; */
+
+        position: relative;
+      }
+      .block-yzm,
+      .pwd {
+        margin-top: 20px;
+      }
+
+      .block-login-mess input,
+      .block-login-pwd input {
+        width: 300px;
+        height: 42px;
+        border: 1px solid #ddd;
+        box-sizing: border-box;
+      }
+      .input-wrap::placeholder {
+        font-size: 14px;
+      }
+      .block-login-mess input:hover,
+      .block-login-pwd input:hover {
+        border: 1px solid #de0100;
+      }
+
+      .input-info {
+        padding-left: 50px;
+      }
+      .phone-num {
+        padding-left: 120px;
+      }
+      .yzm {
+        padding-left: 50px;
+      }
+      .block-login-mess i,
+      .block-login-pwd i {
+        position: absolute;
+        top: 1px;
+        left: 0.0625rem;
         width: 40px;
         height: 40px;
-        background-color: #dddddd;
-        /* background: url(./images/矩形1.png); */
+        background-color: #ddd;
+        display: inline-block;
       }
-      form div input {
-        width: 260px;
+      .block-phone-num > i {
+        background: #ddd url(./images/shouji.png) no-repeat center;
+        background-size: 70%;
+      }
+      .block-yzm > i {
+        background: #ddd url(./images/yzm.png) no-repeat center;
+        background-size: 70%;
+      }
+      .uname > i {
+        background: #ddd url(./images/uname.png) no-repeat center;
+        background-size: 70%;
+      }
+      .pwd > i {
+        background: #ddd url(./images/pwd.png) no-repeat center;
+        background-size: 70%;
+      }
+      .select-wrap {
+        position: absolute;
+        left: 50px;
+        top: 1px;
+        width: 60px;
         height: 40px;
-        margin-left: 40px;
-        vertical-align: middle;
+        background-color: aqua;
+      }
+      .select-wrap::after {
+        display: block;
+        content: "";
+        height: 40px;
+        width: 40px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: url(./images/down.png) no-repeat center;
+      }
+      .select-wrap > span {
+        width: 60px;
+        height: 40px;
+        display: block;
+        /* background-color: red; */
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-size: 14px;
+        line-height: 40px;
+        pointer-events: none; /*鼠标事件不做出任何反应*/
+      }
+      .select-wrap select {
+        width: 60px;
+        height: 40px;
+        border: 0;
+        outline: none;
+        color: transparent;
+      }
+      .select-wrap select option {
+        color: #000;
+      }
+      .send-yzm {
+        display: inline-block;
+        height: 20px;
+        font-size: 14px;
+        position: absolute;
+        right: 4px;
+        top: 11px;
+        cursor: pointer;
+      }
+      .login-btn {
+        background-color: #de0100;
+        font-size: 16px;
+        margin-top: 20px;
+        border-radius: 5px;
+        color: #fff;
+      }
+      .help {
+        font-size: 14px;
+        margin-top: 25px;
+        margin-left: 100px;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="content">
-        <div class="main">
+        <div class="login">
           <div class="head">
-            <a href="#">密码登录</a>
+            <a href="#" class="current">密码登录</a>
             <a href="#">短信登录</a>
           </div>
-          <form action="" method="post">
-            <div class="info">
-              <input type="text" placeholder="会员名/邮箱/手机号" />
-            </div>
-            <div class="pwd">
-              <input
-                type="password"
-                name=""
-                id=""
-                placeholder="请输入登录密码"
-              />
-            </div>
-            <input type="submit" value="登录" />
-          </form>
-          <a href="#">忘记密码</a>
-          <a href="#">忘记用户名</a>
-          <a href="#">免费注册</a>
+          <!-- 密码登录 -->
+          <!-- block-login-pwd start -->
+          <div class="block-login-pwd">
+            <form action="" method="post">
+              <div class="uname input-wrap">
+                <i></i>
+                <input
+                  type="text"
+                  class="input-info"
+                  placeholder="会员名/邮箱/手机"
+                />
+              </div>
+              <div class="pwd input-wrap">
+                <i></i>
+                <input
+                  type="text"
+                  class="yzm input-info"
+                  placeholder="请输入密码"
+                />
+              </div>
+              <input type="submit" value="登录" class="login-btn" />
+
+              <div class="help">
+                <a href="#">忘记密码</a>
+                <a href="#">忘记用户名</a>
+                <a href="#">免费注册</a>
+              </div>
+            </form>
+          </div>
+          <!-- block-login-pwd end -->
+
+          <!-- 短信登录  -->
+          <!-- block-login-mess start -->
+          <div class="block-login-mess">
+            <form action="" method="post">
+              <div class="block-phone-num input-wrap">
+                <i></i>
+                <div class="select-wrap">
+                  <span>85</span>
+                  <select name="" id="">
+                    <option value="+85">+85中国大陆</option>
+                    <option value="+853">+853中国澳门</option>
+                    <option value="+886">+886中国台湾</option>
+                    <option value="+853">+82 韩国</option>
+                    <option value="+853">+81 日本</option>
+                    <option value="+853">+853中国大陆</option>
+                  </select>
+                </div>
+                <input
+                  type="text"
+                  class="phone-num input-info"
+                  placeholder="请输入收手机号"
+                />
+              </div>
+              <div class="block-yzm input-wrap">
+                <i></i>
+                <input
+                  type="text"
+                  class="yzm input-info"
+                  placeholder="请输入验证码"
+                />
+                <span class="send-yzm"><a href="#"> 发送验证码 </a></span>
+              </div>
+              <input type="submit" value="登录" class="login-btn" />
+
+              <div class="help">
+                <a href="#">忘记密码</a>
+                <a href="#">忘记用户名</a>
+                <a href="#">免费注册</a>
+              </div>
+            </form>
+          </div>
+          <!-- block-login-mess end  -->
         </div>
       </div>
     </div>
