--- a/src/03-css-basic-learning/13-flex弹性布局/09.flex-shrink缩放.html
+++ b/src/03-css-basic-learning/13-flex弹性布局/09.flex-shrink缩放.html
@@ -7,27 +7,35 @@
     <title>Document</title>
     <style>
       .flex-contaier {
-        /* width: 400px; */
+        width: 200px;
         height: 200px;
         display: flex;
         background-color: antiquewhite;
       }
       .flex-item {
-        width: 100px;
+        /* width: 100px; */
         height: 100px;
       }
       .flex-item:nth-child(1) {
+        width: 100px;
         background-color: pink;
-        flex-grow: 2;
+        flex-shrink: 0.2;
       }
       .flex-item:nth-child(2) {
+        width: 100px;
         background-color: skyblue;
-        flex-grow: 3;
+        flex-shrink: 0.2;
       }
       .flex-item:nth-child(3) {
+        width: 100px;
         background-color: palevioletred;
-        flex-grow: 4;
+        flex-shrink: 0.1;
       }
+      /* 溢出宽=所有项目宽-容器宽 =300-200=100*/
+      /* 总缩放宽=溢出宽*（0.2+0.2+0.1）=100*0.5=50 */
+      /* 100*0.2+100*0.2+100*0.1=50 */
+
+      /* 100-20=80 */
     </style>
   </head>
   <body>
