25-swiper事件及移动端基础

--- a/src/03-css-basic-learning/15-移动开发核心基础/a.html
+++ b/src/03-css-basic-learning/15-移动开发核心基础/a.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit-cover"
+    />
     <title>Document</title>
     <style>
       body {
@@ -13,6 +16,12 @@
         width: 200px;
         height: 200px;
         background-color: rgb(249, 195, 125);
+        /* padding-bottom: constant(safe-area-inset-bottom); */
+        /* padding-bottom: env(safe-area-inset-bottom); */
+        /* 兼容ios>11.2 */
+        /* height: calc(50px + constant(safe-area-inset-bottom)); */
+        /* 兼容ios>11.2 */
+        /* height: calc(50px + env(safe-area-inset-bottom)); */
       }
     </style>
   </head>
